@@ -1,5 +1,4 @@
-# Install our files in the proper place
-authbackenddir = $(datadir)/$(PACKAGE)/auth/
+authbackenddir = $(pkgdatadir)/auth/
 authbackend_DATA = \
 	compat-BSD-FreeBSD-groupadd.bash \
 	compat-BSD-FreeBSD-groupmod.bash \
@@ -14,7 +13,7 @@ authbackend_DATA = \
 	files-GNU-glibc-useradd.bash \
 	files-GNU-glibc-usermod.bash
 
-EXTRA_DIST = $(foreach f, $(authbackend_DATA), $(f).in)
+EXTRA_DIST = $(authbackend_DATA:%=%.in)
 
 CLEANFILES = *~ $(authbackend_DATA)
 MAINTAINERCLEANFILES = Makefile.in
